[package]
name = "learn-wpgu"
version = "0.1.0"
authors = ["Drew Youngwerth <drew@youngwerth.com>"]
edition = "2018"

[[bin]]
name = "learn-wgpu-window"
path = "src/main.rs"

[dependencies]
image = "0.23"
winit = "0.24"
shaderc = "0.7"
cgmath = "0.18"
env_logger = "0.7"
log = "0.4"
futures = "0.3"

[dependencies.wgpu]
version = "0.7"
features = ["vulkan-portability"]
